Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_swap_3_altergo.txt
[kernel] Parsing swap_3_rte.c (with preprocessing)
[kernel] swap_3_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing swap_3.c (with preprocessing)
  3     [rte:annot] annotating function swap
[kernel] Frama-C aborted: invalid user input.
